# lofi-pomodoro

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  elevenlabs_prompts.yaml  pyproject.toml  requirements.txt  youtube_links.txt
context/output/plans/: divulgacao-plano-geral.md  texto-devto-artigo.md  texto-hacker-news.md  texto-product-hunt.md  texto-reddit-productivity.md  texto-reddit-python.md  texto-twitter-thread.md
docs/: flow-state-and-breaks.md  music-science-studying.md  scripts.md
docs/plans/: elevenlabs-music-generation.md  spotify-integration.md  web-ui-github-pages.md
pomodoro/: __init__.py  __main__.py  spotify_player.py
scripts/: download_youtube.py  fix_id3_tags.py  generate_music.py  scrape_fma.py  scrape_songs.py
