[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pomodoro"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "A CLI Pomodoro timer with lofi music"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
keywords = ["pomodoro", "timer", "productivity", "lofi", "music"]
dependencies = [
    "rich>=10.0.0",
    "pygame>=2.0.0",
    "numpy",
    "pynput",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
# scripts/scrape_songs.py and scripts/scrape_fma.py
scrape = ["requests", "beautifulsoup4"]
# scripts/download_youtube.py (also requires ffmpeg system binary)
youtube = ["yt-dlp"]
# scripts/fix_id3_tags.py
id3 = ["eyed3"]
# scripts/generate_music.py
elevenlabs = ["elevenlabs>=1.0", "pyyaml"]
# spotify playback control (requires Spotify Premium)
spotify = ["spotipy>=2.24.0"]
# all optional script deps at once
scripts = ["requests", "beautifulsoup4", "yt-dlp", "eyed3", "elevenlabs>=1.0", "pyyaml"]

[project.urls]
Homepage = "https://github.com/WittmannF/lofi-pomodoro"
Repository = "https://github.com/WittmannF/lofi-pomodoro.git"
"Bug Tracker" = "https://github.com/WittmannF/lofi-pomodoro/issues"

[project.scripts]
pomodoro = "pomodoro.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["pomodoro"]
include = [
    "default-playlist/*.mp3",
]

[tool.hatch.build.targets.sdist]
include = [
    "default-playlist/*.mp3",
]

[tool.hatch.build]
include = [
    "default-playlist/*.mp3",
] 